--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -146,6 +146,10 @@
     border-radius: 1rem;
 }
 
+.content h1{
+    text-align: center;
+}
+
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
