--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -146,6 +146,10 @@
     border-radius: 1rem;
 }
 
+.pagination button :hover{
+    background-color: #77c850;
+}
+
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
