Adição no layout do css

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,29 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'AR One Sans', sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: gray;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: gray;
 }
 
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
         height: auto;
-        margin: 1rem auto;
+        margin: 1.5rem auto;
         border-radius: 1rem;
     }
+    
+}
+
+#loadMoreButton {
+    cursor: pointer;
 }
