aidicionando melhorias no css

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,21 +4,21 @@
 }
 
 body {
-    background-color: gray;
+    background-color: whitesmoke;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: gray;
+    background-color: black;
 }
 
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
         height: auto;
-        margin: 1.5rem auto;
+        margin: 1rem auto;
         border-radius: 1rem;
     }
     
