--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,15 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border: 5px solid gray;
+    
+}
+
+.pokemon:hover{
+
+    cursor: pointer;
+    border-radius: 05%;
+    animation: pokemonHover 2s linear infinite;
 }
 
 .pokemon .number {
@@ -144,6 +153,29 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content{
+    background-color: #D3D3D3;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 5px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media screen and (min-width: 380px) {
@@ -163,3 +195,19 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
+
+@keyframes pokemonHover {
+    0% {
+      border-color: yellow;
+      background-color: red;
+    }
+    50% {
+        border-color: red;
+      background-color: yellow;
+    }
+    100% {
+        border-color: yellow;
+      background-color: red;
+      transform: scale(1.2);
+    }
+  }
