--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,7 +11,8 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    font-family: Roboto, sans serif;
 }
 
 @media screen and (min-width: 992px) {
