--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,28 +6,32 @@
     list-style: none;
 }
 
+h1 {
+    text-align: center;
+}
+
 .normal {
     background-color: #a6a877;
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #77dd77;
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: #ff6961;
 }
 
 .water {
-    background-color: #678fee;
+    background-color: #84b6f4;
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: #fdfd96;
 }
 
 .ice {
-    background-color: #98d5d7;
+    background-color: #cce5ff;
 }
 
 .ground {
@@ -39,7 +43,7 @@
 }
 
 .poison {
-    background-color: #a040a0;
+    background-color: #e79eff;
 }
 
 .fighting {
@@ -86,6 +90,10 @@
     border-radius: 1rem;
 }
 
+.pokemon:hover {
+    cursor: pointer;
+}
+
 .pokemon .number {
     color: #000;
     opacity: .3;
@@ -118,7 +126,7 @@
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
+    filter: brightness(0.8);
     text-align: center;
 }
 
@@ -137,13 +145,15 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    background-color: #444444;
     color: #fff;
-    background-color: #6c79db;
     border: none;
-    border-radius: 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    padding: 0.5rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
+    border-radius: 0.5rem;
 }
 
 @media screen and (min-width: 380px) {
