--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -3,9 +3,9 @@
     list-style: none;
     padding: 0;
     margin: 0;
-
     display: grid;
     grid-template-columns: 1fr;
+    gap: 15px;
 }
 
 .pokemon{
@@ -16,12 +16,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transition: 1s ease;
+    transition: 0.2s ease;
+    width: 360px;
+    height: 220px;
 }
 
 .pokemon:hover{
     opacity: 0.8;
-    border: 3px #fbff19 solid;
+    border: 3px #5219ff solid;
+    cursor: pointer;
 }
 
 
@@ -99,16 +102,16 @@
 }
 
 .pokemon .number{
-    color: gray; 
+    color: black; 
     opacity: 0.6;
     text-align: right;
-    font-size: 0.7rem;
+    font-size: 1.5rem;
 }
 
 .pokemon .name{
     text-transform: capitalize;
     color: #fff;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
 }
 
 .pokemon .detail{
@@ -119,7 +122,7 @@
 }
 
 .pokemon .detail .types{
-    padding: 0;
+    padding: 0.1rem 0.2rem;
     margin: 0;
     list-style: none;
 }
@@ -127,7 +130,7 @@
 .pokemon .detail .types .type{
     color: #fff;
     padding: 0.2rem 0.5rem;
-    font-size: 0.6rem;
+    font-size: 1rem;
     margin: 0.2rem 0;
     border-radius: 1rem;
     filter: brightness(1.1);
@@ -135,7 +138,7 @@
 
 .pokemon .detail img{
     max-width: 100%;
-    height: 70px;
+    height: 120px;
    
 }
 
