--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,19 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    margin: 0;
 }
 
 body {
     background-color: #f6f8fc;
+}
+
+li,ol,ul{
+all:unset;
+
+}
+ol,ul{
+    display: flex;
 }
 
 .content {
