--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,27 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-}
 
+}
 body {
-    background-color: #f6f8fc;
+    background-color: #F6F8FC;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
     padding: 1rem;
     background-color: #fff;
+    height: 100vh;
+    width: 100vw;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
+@media screen and (min-width: 992px){
+    .content{
         max-width: 992px;
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
     }
+
 }
+
+
