--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,56 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color: #f6f8fc;
+  background-color: #F6F7FC;
+  color: #333;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+  background-color: #FFF;
+  padding: 1rem;
+  min-height: 100vh;
+  max-width: 100%;
+  height: max-content;
+  width: 100vw;
+  padding-bottom: 4rem;
+}
+
+.content h1 {
+  text-align: center;
+}
+
+#btn-container {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+button.btn {
+  background-color: #6C7ADC;
+  color: #FFF;
+  border: none;
+  padding: 1rem 0;
+  width: 100%;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+#btn-container button:hover {
+  filter: brightness(1.2);
+  cursor: pointer;
 }
 
 @media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+  .content {
+    height: auto;
+    max-width: 992px;
+    margin: 1rem auto;
+    border-radius: 1rem;
+  }
 }
