--- a/assets/css/pkDt.css
+++ b/assets/css/pkDt.css
@@ -149,15 +149,13 @@
 
 .ft .pokeFt img {
     max-width: 100%;
-    height: 100%;
-    position: relative;
-    
+    height: 250px;   
 }
 
 
 .ft {
    display: flex; 
-   
+   position: relative;
    justify-content: center;
     
 }
