--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -92,7 +92,8 @@ a {
 @media screen and (min-width: 992px) {
   button.btn {
     max-width: 992px;
-    margin: 1rem auto;
+    width: 100%;
+    margin: 1rem 0;
     border-radius: 0 0 1rem 1rem;
   }
 }
