:recycle: corrigindo estilo do botão

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -52,6 +52,7 @@ body {
 #btn-container {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   display: flex;
   justify-content: center;
