Adição de modificações

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,4 @@
+
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
@@ -11,14 +12,14 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #FFF;
 }
 
 @media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+.content {
+    max-width: 992px;
+    height: auto;
+    margin: 1rem auto;
+    border-radius: 1rem;
     }
-}
+  }
