--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,81 +1,82 @@
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 
 .normal {
     background-color: #a6a877;
-}
 
+}
 .grass {
     background-color: #77c850;
-}
 
+}
 .fire {
     background-color: #ee7f30;
-}
 
+}
 .water {
     background-color: #678fee;
-}
 
+}
 .electric {
     background-color: #f7cf2e;
-}
 
+}
 .ice {
     background-color: #98d5d7;
-}
 
+}
 .ground {
     background-color: #dfbf69;
-}
 
+}
 .flying {
     background-color: #a98ff0;
-}
 
+}
 .poison {
     background-color: #a040a0;
-}
 
+}
 .fighting {
     background-color: #bf3029;
-}
 
+}
 .psychic {
     background-color: #f65687;
-}
 
+}
 .dark {
     background-color: #725847;
-}
 
+}
 .rock {
     background-color: #b8a137;
-}
 
+}
 .bug {
     background-color: #a8b720;
-}
 
+}
 .ghost {
     background-color: #6e5896;
-}
 
-.steel {
+}
+.streel {
     background-color: #b9b7cf;
-}
 
+}
 .dragon {
     background-color: #6f38f6;
-}
 
+}
 .fairy {
     background-color: #f9aec7;
+    
 }
 
 .pokemon {
@@ -83,7 +84,7 @@
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: 2rem;
 }
 
 .pokemon .number {
@@ -94,16 +95,16 @@
 }
 
 .pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
+    color: #FFF;
     margin-bottom: .25rem;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-between;
 }
 
 .pokemon .detail .types {
@@ -113,18 +114,18 @@
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
+    color: #FFF;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
+    filter: brightness(1.1);
 }
 
 .pokemon .detail img {
     max-width: 100%;
-    height: 70px;
+    width: 70px;
 }
 
 .pagination {
@@ -140,8 +141,8 @@
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
+    color: #FFF;
+    background-color: grey;
     border: none;
     border-radius: 1rem;
 }
