feat: Criação de menu principal, alterações de layout da pagina de  inicio e adição de detalhes dos Pokemons

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,175 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    background-position: center;
+	margin: 0;
+	padding: 0;
+   
 }
 
-body {
-    background-color: #f6f8fc;
+.body {
+    background-color: rgb(212, 204, 204);
+    background-image: url("https://th.bing.com/th/id/OIG.sOdUOw_JfqyBm_re0zlv?pid=ImgGn");
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+
 }
+
+#menu {
+    list-style-type: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    z-index: 3;
+}
+
+#menu li {
+    float: left;
+}
+
+#menu li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#menu li a:hover:not(.active) {
+    background-color: #111;
+}
+
+#menu li a.active {
+    background-color: #04AA6D;
+}
+
+#menu li.right {
+    float: right;
+}
+
+@media screen and (max-width: 600px) {
+  #menu li.right, 
+  #menu li {
+    float: none;}
+}
+
+#welcomePokedex, h2{
+	font-family: 'Silkscreen', cursive;
+    position: fixed;
+	left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 50px;
+    margin-left: -200px;
+    margin-top: -125px;
+  }
+
+h2 {
+	color: #04AA6D;
+	text-shadow: 2px 1px #060606;
+	transition: 0.3s;
+	font-size: 30px;
+	white-space: nowrap;
+
+}
+
+h2:hover {
+    color: #29f0a7;
+    text-shadow: 2px 2px #0d99e4;
+}
+  
+  #btnStartPokedex {
+	font-family: 'Silkscreen', cursive;
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 50px;
+    margin-left: -150px;
+    margin-top: -20px;
+    text-align: center;
+	font-size: 30px;
+	letter-spacing: 1.3px;
+	font-weight: 700;
+	color: #ffffff;
+	background: #04AA6D;
+ 	background: linear-gradient(90deg, rgb(5, 100, 51) 0%, rgba(10, 230, 153, 0.886) 100%);
+	border: none;
+	border-radius: 1000px;
+	box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+	transition: all 0.3s ease-in-out 0s;
+	cursor: pointer;
+	outline: none;
+	position: fixed;
+	}
+  
+#btnStartPokedex::before {
+  	content: '';
+	border-radius: 1000px;
+	min-width: calc(300px + 12px);
+	min-height: calc(60px + 12px);
+	border: 4px solid #00FFCB;
+	box-shadow: 0 0 60px rgba(0,255,203,.64);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	opacity: 0;
+	transition: all .3s ease-in-out 0s;
+  }
+  
+  #btnStartPokedex:hover, #btnStartPokedex:focus {
+	color: #010b04;
+	transform: translateY(-6px);
+  }
+  
+  #btnStartPokedex:hover::before, #btnStartPokedex:focus::before {
+	opacity: 1;
+  }
+  
+  #btnStartPokedex::after {
+	content: '';
+	width: 30px; height: 30px;
+	border-radius: 100%;
+	border: 4px solid #00FFCB;
+	position: absolute;
+	z-index: -1;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	animation: ring 2.0s infinite;
+  }
+  
+  #btnStartPokedex:hover::after, #btnStartPokedex:focus::after {
+	animation: none;
+	display: none;
+  }
+  
+  @keyframes ring {
+	0% {
+	  width: 30px;
+	  height: 30px;
+	  opacity: 1;
+	}
+	100% {
+	  width: 300px;
+	  height: 300px;
+	  opacity: 0;
+	}
+  }
 
 .content {
     width: 100vw;
     height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+    padding-top: 9.0rem;
+    background-color: #ffffff;
+    visibility: hidden;
 }
 
 @media screen and (min-width: 992px) {
@@ -20,5 +178,7 @@ body {
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
+        padding-top: 3.0rem;
     }
 }
+
