--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,12 +6,24 @@
     list-style: none;
 }
 
+.pokemons .clickArea {
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.8rem;
+
+}
+
 .normal {
     background-color: #a6a877;
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #76c850;
 }
 
 .fire {
@@ -79,11 +91,18 @@
 }
 
 .pokemon {
+    position: relative;
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.pokemon:hover {
+    box-shadow: 0 3px 9px 0 #000;
 }
 
 .pokemon .number {
@@ -99,20 +118,20 @@
     margin-bottom: .25rem;
 }
 
-.pokemon .detail {
+.detail {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
+.detail .types {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
+.detail .types .type {
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
@@ -122,7 +141,7 @@
     text-align: center;
 }
 
-.pokemon .detail img {
+.detail img {
     max-width: 100%;
     height: 70px;
 }
@@ -140,10 +159,194 @@
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
+	cursor: pointer;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+button:hover {
+	background-color: rgba(22, 4, 81, 0.756);
+    box-shadow: 0 4px 7px 0rgba(128, 128, 128, 0.673)0;
+}
+
+.pokemonCard, .background {
+    position: fixed; 
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 500px;
+    margin-left: -150px;
+    margin-top: -125px;
+    color: #ffffff;
+    z-index: 2;
+    border-radius: 0.8rem;
+    transition: 0.3s;
+	box-shadow: 0px 0px 80px 55px rgba(0,0,0,0.44);
+	-webkit-box-shadow: 0px 0px 80px 55px rgba(0,0,0,0.44);
+	-moz-box-shadow: 0px 0px 80px 55px rgba(0,0,0,0.44);
+}
+
+.pokemonCard .background {
+	background-image: url("https://th.bing.com/th/id/OIG.P5ZwDfsl0_cziaYg5NyY?pid=ImgGn");
+	background-position: top;
+    background-repeat: no-repeat;
+	float: center;
+	background-size: cover;
+	z-index: -2;
+	opacity: 0.1;
+	
+}
+
+.pokemonCard .name {
+	display: block;
+    text-transform: capitalize;
+	color: #ffffff;
+	margin: 1rem 0 0 1rem;
+    
+}
+
+.pokemonCard .btnClose{
+    background-color: rgb(247, 1, 1);
+	color: #ffffff;
+    cursor: pointer;
+	border: transparent;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+	margin: .5rem .5rem;
+	text-align: center;
+	float: right;
+    transition: background-color 0.5s ease;
+}
+
+.btnClose:hover {
+   border: 1px solid rgb(255, 255, 255);
+   background-color: #640c00d7;
+}
+
+.pokemonCard .infoPokemon {
+    display: flex;
+    flex-direction: column;
+	z-index: 3;
+}
+
+.pokemonCard .infoPokemon .imgPokemon {
+	max-width: 130px;
+	height: 150px;
+	margin: 1rem 2rem 0;
+}
+
+.pokemonCard .infoPokemon .info {
+	background-color: #ffffff;
+	color: #000;
+	border-radius: 2rem 2rem 0.8rem 0.8rem;
+	width: 300px;
+    height: 300px;
+    margin: 0;
+    padding: 0;
+	display: flex;
+	flex-direction: column;
+}
+
+.menu {
+	margin-top: 20px;
+	list-style-type: none;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+
+.menu li {
+	margin: 10px;
+	text-align: left;
+}
+
+.menu li a {
+	text-decoration: none;
+}
+
+a:not(.menu_active) {
+    color: #3e3e3e92;
+}
+
+a.menu_active {
+   color: #000000;
+   border-bottom: solid 2px #047dff;
+}
+
+.pokemonCard .infoPokemon .info .about {
+	z-index: 4;
+	width: 300px;
+    height: 235px;
+	overflow-y: auto;
+	
+}
+
+.pokemonCard .infoPokemon .info .baseStats {
+	display: none;
+	z-index: 4;
+	width: 300px;
+    height: 235px;
+	overflow-y: auto;
+	
+}
+
+.pokemonCard .infoPokemon .info .evolution {
+    display: none;
+	z-index: 4;
+	width: 300px;
+    height: 235px;
+    overflow-y: auto;
+	
+}
+
+.pokemonCard .infoPokemon .info .evolution > div {
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+}
+
+.pokemonCard .infoPokemon .info .evolution > div > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 36px 50px rgba(0,0,0,0.2) inset;
+    -webkit-box-shadow: 0px 0px 36px 50px rgba(0,0,0,0.2) inset;
+    -moz-box-shadow: 0px 0px 36px 50px rgba(0,0,0,0.2) inset;
+}
+.pokemonCard .infoPokemon .info .evolution > div > div > img {
+    width: 70px;
+}
+
+.pokemonCard .infoPokemon .info .evolution > div img.direction {
+    align-self: center;
+    width: 20px;
+    height: 20px;
+}
+
+
+
+.stats {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.border, .center {
+	background-color: #525050a4;
+	border-radius: 12px;
+	height: 5px;
+	width: 150px;
+}
+
+.border .center {
+    background-color: hsla(114, 98%, 51%, 0.659);
+	max-width: 100%;
 }
 
 @media screen and (min-width: 380px) {
