--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,22 +1,22 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #78a0ee;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1000px) {
     .content {
-        max-width: 992px;
+        max-width: 1000px;
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
