--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -11,7 +11,7 @@
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #76c850;
 }
 
 .fire {
@@ -84,6 +84,8 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border: 3px solid #ffffff;
+    box-shadow: 0px 0px 5px #FFF;
 }
 
 .pokemon .number {
@@ -97,6 +99,7 @@
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-weight: 700;
 }
 
 .pokemon .detail {
@@ -137,13 +140,17 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: 0.5rem 1rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 1rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: #6c79db9d;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
+}
+.pagination button:hover {
+    background-color: #6c79db;
 }
 
 @media screen and (min-width: 380px) {
