--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -86,6 +86,12 @@
     border-radius: 1rem;
     border: 3px solid #ffffff;
     box-shadow: 0px 0px 5px #FFF;
+    cursor: pointer;
+}
+
+.pokemon:hover {
+    transform: scale(1.05);
+    transition: all .2s ease-in-out;
 }
 
 .pokemon .number {
