--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    animation: 1s bounceInLeft;
 }
 
 .normal {
@@ -87,11 +88,13 @@
     border: 3px solid #ffffff;
     box-shadow: 0px 0px 5px #FFF;
     cursor: pointer;
+    transition: all .5s ease-in-out;
 }
 
 .pokemon:hover {
-    transform: scale(1.05);
+    transform: scale(1.1);
     transition: all .2s ease-in-out;
+    z-index: 999;
 }
 
 .pokemon .number {
