--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,81 +1,99 @@
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
 
 .normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
+    background-color: #A8A77A;
+    filter: brightness(1.05)
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: #EE8130;
+    filter: brightness(1.05)
 }
 
 .water {
-    background-color: #678fee;
+    background-color: #6390F0;
+    filter: brightness(1.05)
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: #ddb92a;
+    filter: brightness(1.05)
+}
+
+.grass {
+    background-color: #7AC74C;
+    filter: brightness(1.05)
 }
 
 .ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
+    background-color: #96D9D6;
+    filter: brightness(1.05)
 }
 
 .fighting {
-    background-color: #bf3029;
+    background-color: #C22E28;
+    filter: brightness(1.05)
+}
+
+.poison {
+    background-color: #A33EA1;
+    filter: brightness(1.05)
+}
+
+.ground {
+    background-color: #E2BF65;
+    filter: brightness(1.05)
+}
+
+.flying {
+    background-color: #A98FF3;
+    filter: brightness(1.05)
 }
 
 .psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
+    background-color: #F95587;
+    filter: brightness(1.05)
 }
 
 .bug {
-    background-color: #a8b720;
+    background-color: #A6B91A;
+    filter: brightness(1.05)
+}
+
+.rock {
+    background-color: #B6A136;
+    filter: brightness(1.10)
 }
 
 .ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
+    background-color: #735797;
+    filter: brightness(1.05)
 }
 
 .dragon {
-    background-color: #6f38f6;
+    background-color: #6F35FC;
+    filter: brightness(1.05)
+}
+
+.dark {
+    background-color: #705746;
+    filter: brightness(1.05)
+}
+
+.steel {
+    background-color: #B7B7CE;
+    filter: brightness(1.05)
 }
 
 .fairy {
-    background-color: #f9aec7;
+    background-color: #D685AD;
+    filter: brightness(1.05)
 }
 
 .pokemon {
@@ -86,45 +104,46 @@
     border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
+.number{
+    color: black;
+    opacity: .1;
+    font-weight: bold;
     text-align: right;
-    font-size: .625rem;
 }
 
-.pokemon .name {
+.name{
+    color: #FFF;
+    margin: .25rem 0 0 0;
+    font-weight: bold;
     text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
 }
 
-.pokemon .detail {
+.pokemon .details img {
+    max-width: 100%;
+    height: 70px;
+}
+
+.details {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
+.pokemon .details .types {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
+.pokemon .details .types .type {
     padding: .25rem .5rem;
-    margin: .25rem 0;
+    margin: .25rem .25rem .25rem 0;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #FFF;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
-}
-
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
 }
 
 .pagination {
@@ -133,32 +152,48 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 1rem;
+    padding: 2rem;
 }
 
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
+.pagination button{
+    padding: .8rem;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    color: #FFF;
+    cursor: pointer;
 }
 
-@media screen and (min-width: 380px) {
+.pagination button:hover{
+    background-color: #626eca;
+}
+
+a {
+    text-decoration: none;
+}
+
+@media screen and (min-width: 992px) { 
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: .5rem;
+    }
+}
+
+@media screen and (min-width: 380px) { 
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 576px) { 
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { 
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
